--- a/about.html
+++ b/about.html
@@ -577,7 +577,7 @@
     
     <!-- Bottom Navigation -->
     <nav class="bottom-nav">
-        <a href="index.html" class="nav-item">
+        <a href="/" class="nav-item">
             <i class="fas fa-home nav-icon"></i>
             <span>Home</span>
         </a>
@@ -585,13 +585,15 @@
             <i class="fas fa-search nav-icon"></i>
             <span>Search</span>
         </a>
-        <a href="#" class="nav-item">
-            <i class="fas fa-gift nav-icon"></i>
-            <span>Deals</span>
-        </a>
+        
         <a href="favorites.html" class="nav-item">
             <i class="fas fa-heart nav-icon"></i>
-            <span>Favorites</span>
+            <span>favorites</span>
+        </a>
+
+        <a href="myprofile.html" class="nav-item">
+            <i class="fas fa-user nav-icon"></i>
+            <span>Account</span>
         </a>
     </nav>
 
