--- a/login.html
+++ b/login.html
@@ -305,24 +305,25 @@
 
 
   <nav class="bottom-nav">
-    <a href="index.html" class="nav-item">
-        <i class="fas fa-home nav-icon"></i>
-        <span>Home</span>
-    </a>
-    <a href="#" class="nav-item">
-        <i class="fas fa-search nav-icon"></i>
-        <span>Search</span>
-    </a>
-    <a href="#" class="nav-item">
-        <i class="fas fa-gift nav-icon"></i>
-        <span>Deals</span>
-    </a>
-    <a href="favorites.html" class="nav-item">
-        <i class="fas fa-heart nav-icon"></i>
-        <span>favorites</span>
-    </a>
+        <a href="/" class="nav-item">
+            <i class="fas fa-home nav-icon"></i>
+            <span>Home</span>
+        </a>
+        <a href="#" class="nav-item">
+            <i class="fas fa-search nav-icon"></i>
+            <span>Search</span>
+        </a>
+        
+        <a href="favorites.html" class="nav-item">
+            <i class="fas fa-heart nav-icon"></i>
+            <span>favorites</span>
+        </a>
 
-</nav>
+        <a href="myprofile.html" class="nav-item">
+            <i class="fas fa-user nav-icon"></i>
+            <span>Account</span>
+        </a>
+    </nav>
   
   <main class="main">
     <div class="container">
