--- a/update-password.html
+++ b/update-password.html
@@ -304,23 +304,25 @@
   </main>
 
   <nav class="bottom-nav">
-    <a href="index.html" class="nav-item">
-        <i class="fas fa-home nav-icon"></i>
-        <span>Home</span>
-    </a>
-    <a href="#" class="nav-item">
-        <i class="fas fa-search nav-icon"></i>
-        <span>Search</span>
-    </a>
-    <a href="#" class="nav-item">
-        <i class="fas fa-gift nav-icon"></i>
-        <span>Deals</span>
-    </a>
-    <a href="favorites.html" class="nav-item">
-        <i class="fas fa-heart nav-icon"></i>
-        <span>Favorites</span>
-    </a>
-  </nav>
+        <a href="/" class="nav-item">
+            <i class="fas fa-home nav-icon"></i>
+            <span>Home</span>
+        </a>
+        <a href="#" class="nav-item">
+            <i class="fas fa-search nav-icon"></i>
+            <span>Search</span>
+        </a>
+        
+        <a href="favorites.html" class="nav-item">
+            <i class="fas fa-heart nav-icon"></i>
+            <span>favorites</span>
+        </a>
+
+        <a href="myprofile.html" class="nav-item">
+            <i class="fas fa-user nav-icon"></i>
+            <span>Account</span>
+        </a>
+    </nav>
 
   <script type="module">
     import { createClient } from 'https://esm.sh/@supabase/supabase-js@2'
