--- a/favorites.html
+++ b/favorites.html
@@ -110,7 +110,7 @@
         }
         
         .buy-now-btn {
-            background: #d41a1a;
+            background:linear-gradient(135deg, #ff0000 0%, #77008f 100%);
             color: white;
             border: none;
             border-radius: 4px;
