--- a/myprofile.html
+++ b/myprofile.html
@@ -34,7 +34,7 @@
         body {
             background-color: var(--yunoxa-bg);
             color: var(--yunoxa-text);
-            padding-top: 150px;
+            padding-top: 65px;
             padding-bottom: 70px;
         }
         
@@ -252,7 +252,7 @@
         }
         
         .delete-btn {
-            background-color: #e02f2f;
+            background:linear-gradient(135deg, #ff0000 0%, #77008f 100%);
             color: white;
             border: none;
         }
@@ -643,7 +643,7 @@
     justify-content: center;
     gap: 3px;
     padding: 0 10px;
-    background: linear-gradient(135deg, #c90909 0%, #ff2f2f 100%);
+    background:linear-gradient(135deg, #ff0000 0%, #77008f 100%);
     color: #fff !important;      /* Enforce white text */
     text-decoration: none;
     border-radius: 40px;
