--- a/sellerlogin.html
+++ b/sellerlogin.html
@@ -4,6 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Yunoxa - Professional Seller Portal</title>
+    <!-- Favicon -->
+<link rel="icon" href="img/Favicon.svg" type="image/svg+xml">
+<link rel="icon" href="img/Favicon.png" type="image/png">
+<link rel="shortcut icon" href="img/Favicon.ico" type="image/x-icon">
+
     <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
     <script src="https://cdn.jsdelivr.net/npm/compressorjs@1.1.1/dist/compressor.min.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
@@ -11,7 +16,7 @@
         :root {
             --primary-color: #e02f2f;
             --secondary-color: #c41e1e;
-            --background-gradient: linear-gradient(135deg, #cf0404 20%, #ff3e7e 100%);
+            --background-gradient: linear-gradient(135deg, #cf0404 20%, #6822c4 100%);
             --box-shadow: 0 15px 30px rgba(0,0,0,0.12);
             --yunoxa-text: #333;
             --yunoxa-light-text: #666;
