--- a/update-password.html
+++ b/update-password.html
@@ -243,7 +243,7 @@
 <body>
   <header class="header">
     <div class="container header-container">
-      <img src="img/Favicon.png" alt="Yunoxa Logo" class="logo">
+      <img src="img/Favicon.svg" alt="Yunoxa Logo" class="logo">
     </div>
   </header>
 
