--- a/about.html
+++ b/about.html
@@ -7,7 +7,10 @@
     <meta content="Discover Yunoxa's story, mission, and the team behind Sri Lanka's most innovative online marketplace" name="description">
 
     <!-- Favicon -->
-    <link href="https://img.kwcdn.com/product/open/2023-09-19/1695100220116-7e3a8b7a3a1e4b1d8f8f5a0a5d1a9a7a-goods.jpeg?imageView2/2/w/800/q/70/format/webp" rel="icon" type="image/jpeg">
+<link rel="icon" href="img/Favicon.svg" type="image/svg+xml">
+<link rel="icon" href="img/Favicon.png" type="image/png">
+<link rel="shortcut icon" href="img/Favicon.ico" type="image/x-icon">
+
 
     <!-- Font Awesome -->
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" rel="stylesheet">
