--- a/donotsell.html
+++ b/donotsell.html
@@ -3,6 +3,12 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  
+  <!-- Favicon -->
+<link rel="icon" href="img/Favicon.svg" type="image/svg+xml">
+<link rel="icon" href="img/Favicon.png" type="image/png">
+<link rel="shortcut icon" href="img/Favicon.ico" type="image/x-icon">
+
   <title>Do Not Sell My Personal Information</title>
   <style>
     /* Original styles remain the same */
