--- a/login.html
+++ b/login.html
@@ -4,6 +4,11 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Login | Yunoxa: Endless Choices, One Marketplace</title>
+  <!-- Favicon -->
+<link rel="icon" href="img/Favicon.svg" type="image/svg+xml">
+<link rel="icon" href="img/Favicon.png" type="image/png">
+<link rel="shortcut icon" href="img/Favicon.ico" type="image/x-icon">
+
   <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 
@@ -299,7 +304,7 @@
 <body>
   <header class="header">
     <div class="container header-container">
-      <img src="img/Favicon.png" alt="Yunoxa Logo" class="logo">
+      <img src="img/Favicon.svg" alt="Yunoxa Logo" class="logo">
     </div>
   </header>
 
