--- a/myprofile.html
+++ b/myprofile.html
@@ -4,6 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Products - Yunoxa</title>
+    <!-- Favicon -->
+<link rel="icon" href="img/Favicon.svg" type="image/svg+xml">
+<link rel="icon" href="img/Favicon.png" type="image/png">
+<link rel="shortcut icon" href="img/Favicon.ico" type="image/x-icon">
+
     <!-- Font Awesome -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <!-- Google Fonts -->
@@ -678,7 +683,7 @@
     <header class="yunoxa-header">
         <div class="header-top">
             <div class="logo">
-                <img src="img/Favicon.png" alt="Yunoxa Logo">
+                <img src="img/Favicon.svg" alt="Yunoxa Logo">
             </div>
             <a href="create.html" class="sell-now-btn">
                 <i class="fas fa-shopping-bag"></i>
