--- a/open.html
+++ b/open.html
@@ -7,7 +7,10 @@
     <meta name="description" content="Amazing deals on quality products - Tomorrow’s vibes, today">
 
     <!-- Favicon -->
-    <link rel="icon" href="img/Favicon.png" type="image/jpeg">
+<link rel="icon" href="img/Favicon.svg" type="image/svg+xml">
+<link rel="icon" href="img/Favicon.png" type="image/png">
+<link rel="shortcut icon" href="img/Favicon.ico" type="image/x-icon">
+
 
     <!-- Open Graph Meta Tags (Dynamic for Social Sharing) -->
     <meta property="og:title" id="og-title" content="Yunoxa - Amazing Deals">
