--- a/termsandconditions.html
+++ b/termsandconditions.html
@@ -7,7 +7,11 @@
     <meta content="termsandconditions terms for Yunoxa - Sri Lanka's Best Online Shopping Platform" name="description">
 
     <!-- Favicon -->
-    <link href="img/favicon.ico" rel="icon">
+    <!-- Favicon -->
+<link rel="icon" href="img/Favicon.svg" type="image/svg+xml">
+<link rel="icon" href="img/Favicon.png" type="image/png">
+<link rel="shortcut icon" href="img/Favicon.ico" type="image/x-icon">
+
 
     <!-- Google Web Fonts -->
     <link rel="preconnect" href="https://fonts.gstatic.com">
