--- a/TTTT.HTML
+++ b/TTTT.HTML
@@ -1,23 +1,57 @@
-<?xml version="1.0" encoding="utf-8"?>
-<svg xmlns="http://www.w3.org/2000/svg" viewBox="107.6927 78.8458 362.2941 401.7441" width="362.294px" height="401.744px" xmlns:bx="https://boxy-svg.com">
-  <defs>
-    <linearGradient id="linear-gradient" x1="94.91" y1="58.17" x2="120.63" y2="35.61" gradientUnits="userSpaceOnUse" gradientTransform="matrix(1, 0, 0, 1, 213.461548, 167.521378)">
-      <stop offset="0" stop-color="#ff0000"/>
-      <stop offset="1" stop-color="#77008f"/>
-    </linearGradient>
-    <linearGradient id="linear-gradient-2" x1="68.94" y1="79.99" x2="68.53" y2="119.05" gradientUnits="userSpaceOnUse" gradientTransform="matrix(1, 0, 0, 1, 213.461548, 167.521378)">
-      <stop offset="0" stop-color="#ff0000"/>
-      <stop offset="1" stop-color="#77008f"/>
-    </linearGradient>
-    <linearGradient id="linear-gradient-3" x1="63.01" y1="31.08" x2="54.13" y2="118.04" gradientUnits="userSpaceOnUse" gradientTransform="matrix(1, 0, 0, 1, 213.461548, 167.521378)">
-      <stop offset="0" stop-color="#ff0000"/>
-      <stop offset="1" stop-color="#77008f"/>
-    </linearGradient>
-  </defs>
-  <g id="logosandtypes_com" style="" transform="matrix(2.0327630043029785, 0, 0, 2.047008991241455, -326.2250061035156, -264.0711364746094)">
-    <path class="cls-3" d="M 213.462 167.521 L 363.462 167.521 L 363.462 317.521 L 213.462 317.521 L 213.462 167.521 Z" style="fill: none; stroke-width: 1;"/>
-    <path class="cls-5" d="M 335.988 216.564 C 328.998 219.575 304.891 238.999 303.185 244.061 C 299.495 241.281 298.815 230.766 298.035 226.746 C 302.625 221.986 330.163 193.231 338.008 187.043 C 351.847 176.127 341.841 214.042 335.988 216.564 Z" style="fill: url(&quot;#linear-gradient&quot;); stroke-width: 1;"/>
-    <path class="cls-1" d="M 289.858 284.17 C 288.048 290 274.631 303.414 269.491 305.744 C 252.321 285.944 290.642 235.491 293.882 232.221 C 293.882 232.221 298.053 243.686 298.183 249.136 C 296.163 251.166 283.788 274 289.858 284.17 Z" style="fill: url(&quot;#linear-gradient-2&quot;); stroke-width: 1;"/>
-    <path class="cls-4" d="M 316.295 254.401 C 326.594 304.884 287.407 331.722 268.359 304.364 L 289.858 284.16 C 296.388 294.49 300.852 278.071 299.792 269.541 C 299.902 259.351 295.902 251.361 295.902 251.361 C 295.902 251.361 295.862 251.411 295.792 251.501 C 293.752 246.841 291.152 242.761 288.492 239.321 C 288.002 237.551 276.072 226.371 275.562 226.621 C 266.192 218.071 245.879 206.917 234.208 201.361 C 217.436 191.795 230.457 172.14 244.776 176.349 C 247.753 176.816 306.695 207.344 316.295 254.401 Z" style="fill: url(&quot;#linear-gradient-3&quot;); stroke-width: 1;"/>
-  </g>  
-</svg>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title>Animated Y Logo</title>
+  <style>
+    body {
+      margin: 0;
+      height: 100vh;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      background: #fffdfd;
+    }
+
+    svg {
+      width: 300px;
+      height: auto;
+    }
+
+    .y-path {
+      fill: none;
+      stroke: #8f0000;
+      stroke-width: 40;
+      stroke-linecap: round;
+      stroke-dasharray: 3000; /* Adjust based on complexity */
+      stroke-dashoffset: 3000;
+      animation: draw 3s ease forwards;
+    }
+
+    @keyframes draw {
+      to {
+        stroke-dashoffset: 0;
+      }
+    }
+  </style>
+</head>
+<body>
+  <svg version="1.0" xmlns="http://www.w3.org/2000/svg"
+       viewBox="0 0 241.000000 256.000000"
+       preserveAspectRatio="xMidYMid meet">
+    <g transform="translate(0.000000,256.000000) scale(0.100000,-0.100000)"
+       fill="none" stroke="none">
+      <path class="y-path" d="M385 2409 c-32 -12 -92 -54 -113 -79 -52 -60 -66 -163 -33 -229 30
+      -57 74 -91 232 -173 338 -176 601 -362 748 -529 l40 -46 -53 -79 c-136 -204
+      -241 -409 -296 -579 -45 -137 -53 -291 -20 -378 29 -76 118 -173 197 -212 51
+      -27 68 -30 148 -30 83 0 96 3 160 34 84 41 182 137 238 231 141 241 154 627
+      33 940 -21 52 -40 102 -42 111 -9 26 264 250 393 322 66 37 96 83 137 207 33
+      101 46 169 46 241 0 100 -28 121 -100 78 -19 -11 -167 -154 -328 -316 -161
+      -162 -294 -294 -295 -292 -34 52 -147 180 -237 269 -178 176 -414 352 -623
+      465 -94 51 -172 66 -232 44z m1036 -1371 c31 -110 34 -324 6 -404 -40 -115
+      -104 -125 -158 -24 -22 41 -17 183 10 270 28 91 101 251 111 245 4 -3 18 -42
+      31 -87z"/>
+    </g>
+  </svg>
+</body>
+</html>
