--- a/giveaway.html
+++ b/giveaway.html
@@ -160,7 +160,7 @@
         }
 
        .prize-image {
-    height: 500px;
+    height: 100;
     background-color: #f9f9f9;
     overflow: hidden;
 }
@@ -711,8 +711,8 @@
                     </div>
                     <div class="prize-details">
                         <h3 class="prize-name">Grand Prize</h3>
-                        <div class="prize-value">LKR 50,000 Shopping Spree</div>
-                        <p class="prize-description">Shop to your heart's content on Yunoxa with our grand prize!</p>
+                        <div class="prize-value">Snowy Night DIY Flow Ma Night Light</div>
+                        <p class="prize-description">Stand a Chance to win an Amazing price With Yunoxa </p>
                     </div>
                 </div>
                 <div class="prize-card">
@@ -721,8 +721,8 @@
                     </div>
                     <div class="prize-details">
                         <h3 class="prize-name">Second Prize</h3>
-                        <div class="prize-value">Latest Smartphone</div>
-                        <p class="prize-description">Brand new flagship smartphone from a leading brand.</p>
+                        <div class="prize-value">Latest 9D AirPods</div>
+                        <p class="prize-description">Stand a Chance to win an Amazing price With Yunoxa</p>
                     </div>
                 </div>
                 
@@ -888,6 +888,8 @@
             <span>Account</span>
         </a>
     </nav>
+
+    <script type="module" src="js/cookie.js"></script>
 
     <script type="module">
 import { createClient } from 'https://esm.sh/@supabase/supabase-js@2'
