--- a/index.html
+++ b/index.html
@@ -169,6 +169,12 @@
         <span>Item added to favorites!</span>
     </div>
 
+    <!-- Mega Giveaway Bubble -->
+<a href="giveaway.html" class="giveaway-bubble" title="Join our Mega Giveaway! 🎁">
+    🎉 Mega Giveaway
+</a>
+
+
     <!-- Bottom Navigation -->
     <nav class="bottom-nav">
         <a href="/" class="nav-item active">
