--- a/FF/index.html
+++ b/FF/index.html
@@ -753,7 +753,7 @@
 
 
         
-        <!-- Registration Form -->
+        <!-- Registration Form Yunoxa -->
         <section class="registration-section" id="registration">
             <h2 class="section-title">Squad Registration</h2>
             <form id="registrationForm">
