--- a/FF.html
+++ b/FF.html
@@ -19,7 +19,7 @@
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
 
         <!--<< Favcion >>-->
-        <link rel="shortcut icon" href="assets/img/favicon.svg">
+        <link rel="shortcut icon" href="assets/img/Favicon.svg">
         <!--<< Bootstrap min.css >>-->
         <link rel="stylesheet" href="assets/css/bootstrap.min.css">
         <!--<< Animate.css >>-->
@@ -87,7 +87,7 @@
             width: 120px;
             height: 120px;
             margin: 0 auto 1rem;
-            background: url('img/Favicon.svg') no-repeat center;
+            background: url('assets/img/Favicon.svg') no-repeat center;
             background-size: contain;
             filter: drop-shadow(var(--glow));
         }
