--- a/FF.html
+++ b/FF.html
@@ -628,7 +628,7 @@
                     <span data-text-preloader="Y" class="letters-loading">
                         Y
                     </span>
-                    <span data-text-preloader="O" class="letters-loading">
+                    <span data-text-preloader="U" class="letters-loading">
                         U
                     </span>
                     <span data-text-preloader="N" class="letters-loading">
