--- a/FF.html
+++ b/FF.html
@@ -8,9 +8,9 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="author" content="Gramentheme">
-        <meta name="description" content="Xriders - Riders & Sports Club HTML Template">
+        <meta name="description" content="Yunoxa Free Fire Tournament">
         <!-- ======== Page title ============ -->
-        <title>Yunoxa - Gaming and eSports Theme HTML Template</title>
+        <title>Yunoxa Free Fire Tournament</title>
 
         <!-- Font Awesome 5 CDN -->
 <!-- Required for <model-viewer> -->
