whatsapp msg update

--- a/favorites.html
+++ b/favorites.html
@@ -624,7 +624,7 @@ img {
                    `*Delivery:* LKR ${deliveryCharge.toFixed(2)}%0A` +
                    `*Total:* LKR ${totalPrice.toFixed(2)}%0A%0A` +
                    `*Product Link:* ${productLink}%0A%0A` +
-                   `I'm interested in buying this item. Please provide more details.`;
+                   `Please provide more details.`;
             
             // Open WhatsApp with the message
             window.open(`https://api.whatsapp.com/send/?phone=${whatsappNumber}&text=${message}`, '_blank');
